Bug 1882013 - Fix non-UIDPLUS imap so previous draft versions are deleted. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D202892

--HG--
extra : moz-landing-system : lando